@@ -1,0 +1,11 @@
+<?php
+require_once dirname(dirname(__FILE__)) . '/export.class.php';
+/**
+ * Class cgGroupExportProcessor
+ */
+class cgGroupExportProcessor extends ClientConfigExportProcessor
+{
+    public $classKey = 'cgGroup';
+}
+
+return 'cgGroupExportProcessor';
