@@ -1,3 +1,4 @@
+#27  Ability to import/export groups and settings
 #16  Auto-select first group when adding a setting
 #15  Force admins to create a group before creating a setting, as settings need groups
 #76  Fix issue where unchecking a checkbox would fail if the setting was required
